--- a/Client/sproduct.html
+++ b/Client/sproduct.html
@@ -42,45 +42,81 @@
   <!-- ===================== -->
   <section id="prodetails" class="section-p1">
     <div class="single-pro-image">
-      <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="" />
+      <img src="img/products/pc1prod1img1.png" width="100%" id="MainImg" alt="" />
 
       <div class="small-img-group">
         <div class="small-img-col">
-          <img src="img/products/f1.jpg" width="100%" class="small-img" alt="" />
+          <img src="img/products/pc1prod1img1.png" width="100%" class="small-img" alt="" />
         </div>
         <div class="small-img-col">
-          <img src="img/products/f2.jpg" width="100%" class="small-img" alt="" />
+          <img src="img/products/pc1prod1img2.png" width="100%" class="small-img" alt="" />
         </div>
         <div class="small-img-col">
-          <img src="img/products/f3.jpg" width="100%" class="small-img" alt="" />
+          <img src="img/products/pc1prod1img3.png" width="100%" class="small-img" alt="" />
         </div>
         <div class="small-img-col">
-          <img src="img/products/f4.jpg" width="100%" class="small-img" alt="" />
+          <img src="img/products/pc1prod1img4.png" width="100%" class="small-img" alt="" />
+        </div>
+        <div class="small-img-col">
+          <img src="img/products/pc1prod1img5.png" width="100%" class="small-img" alt="" />
         </div>
       </div>
     </div>
 
     <div class="single-pro-details">
-      <h6>Home / Shirt</h6>
-      <h4>Men's Fashion Shirt</h4>
-      <h2>400 EGP</h2>
-      <select>
-        <option>Select Size</option>
-        <option>Small</option>
-        <option>Medium</option>
-        <option>Large</option>
-        <option>XL</option>
-        <option>XXL</option>
-      </select>
+      <h6>Home / PC&Laptops</h6>
+      <h4>Aser Laptop</h4>
+      <h2>RM 1,999.00</h2>
+      <ul style="font-weight: bold;list-style-type: disc;padding-left: 20px;">
+        <li style="padding-bottom: 10px;">Intel Core i3-N355</li>
+        <li style="padding-bottom: 10px;">8GB RAM</li>
+        <li style="padding-bottom: 10px;">512GB SSD</li>
+        <li style="padding-bottom: 10px;">14" (1920x1200)</li>
+        <li style="padding-bottom: 10px;">Intel UHD Graphics</li>
+        <li style="padding-bottom: 10px;">MS Office H&S 2021</li>
+        <li style="padding-bottom: 10px;">Win11</li>
+        <li style="padding-bottom: 10px;">2Years Warranty</li>
+
+      </ul>
+      
       <input type="number" value="1" />
       <button class="normal">Add To cart</button>
-      <h4>Product Details</h4>
-      <span>The Gildan Ultra Cotton Shirt is made from a substontial 6.0 oz. per
-        sq. yd. fabric constructed from 100% cotton. This classic fit
-        preshrunk jersey knit provides unmatched comfort with each wear.
-        Featuring a toped neck and shoulder, and a seemless double-needle
-        collar, and available in a range of colors, it offers it all in the
-        ultimate head- turning package.</span>
+      
+    </div>
+  </section>
+
+  <section id="prodetails" class="section-p1">
+    <div>
+      <h4>Product Details</h4><br>
+      <span>
+        <b>Processor</b><br>
+        <span>Intel® Core™ i3-N305 processor</span><br><br>
+        <b>Memory</b><br>
+        <span>8 GB of DDR5 SDRAM system memory (upgradable to 32GB DDR5 RAM)</span><br><br>
+        <b>Storage</b><br>
+        <span>512GB PCIe NVMe SSD</span><br><br>
+        <b>Display</b><br>
+        <span>14.0"" display with IPS (In-Plane Switching) technology, WUXGA 1920 x 1200, Acer ComfyView™ LED-backlit TFT LCD 16:10 aspect ratio</span><br><br>
+        <b>Graphic</b><br>
+        <span>Intel® UHD Graphics</span><br><br>
+        <b>Webcam</b><br>
+        <span>FHD Camera</span><br><br>
+        <b>Audio</b><br>
+        <span>Speakers</span><br><br>
+        <b>Ports</b><br>
+        <span>1 x USB Type-C™ port supporting:</span><br>
+        <span>USB 3.2 Gen 2 (up to 10 Gbps)</span><br>
+        <span>DisplayPort over USB-C</span><br>
+        <span>3 x USB Standard-A ports, supporting:</span><br>
+        <span>Three ports for USB 3.2 Gen 1</span><br>
+        <span>1 x HDMI® 1.4 port with HDCP support</span><br>
+        <span>1 x 3.5 mm headphone/speaker jack, supporting headsets with built-in microphone</span><br><br>
+        <b>Weight</b><br>
+        <span>1.35KG</span><br><br>
+        <b>Dimension</b><br>
+        <span>314.4 (W) x 220 (D) x 18.95 (H) mm</span>
+
+      </span>
     </div>
   </section>
 
