link all the page together

--- a/Client/blog.html
+++ b/Client/blog.html
@@ -47,7 +47,7 @@
 
     <p>Read all case studies about our products! </p>
   </section>
-  <!===========================-->
+  <!----===========================-->
     <!-- blog section     -->
     <section id="blog">
       <div class="blog-box">
@@ -124,7 +124,7 @@
 
     </section>
 
-    <!===========================-->
+    <!--===========================-->
       <!-- blog section     -->
 
       <!-- ===================== -->
@@ -181,7 +181,7 @@
         </div>
         <div class="col">
           <h4>My Account</h4>
-          <a href="#">Sign In</a>
+          <a href="login-registration-page.html">Sign In</a>
           <a href="#">View Cart</a>
           <a href="#">My Wishlist</a>
           <a href="#">Track My Order</a>
