--- a/Client/cart.html
+++ b/Client/cart.html
@@ -118,7 +118,9 @@
                     <td><strong>650 EGP</strong></td>
                 </tr>
             </table>
-            <button class="normal">Proceed to checkout</button>
+            <a href="payment-gateway.html">
+                <button class="normal">Proceed to checkout</button>
+            </a>  
         </div>
     </section>
 
@@ -151,7 +153,7 @@
         </div>
         <div class="col">
             <h4>My Account</h4>
-            <a href="#">Sign In</a>
+            <a href="login-registration-page.html">Sign In</a>
             <a href="#">View Cart</a>
             <a href="#">My Wishlist</a>
             <a href="#">Track My Order</a>
