--- a/Client/order-confirmation.html
+++ b/Client/order-confirmation.html
@@ -114,8 +114,12 @@
         </div>
         
         <div class="actions">
-            <div class="action-button primary-action">Track Order</div>
-            <div class="action-button secondary-action">Continue Shopping</div>
+            <a href="order-history.html">
+                <div class="action-button primary-action">Track Order</div>
+            </a>
+            <a href="index.html">
+                <div class="action-button secondary-action">Continue Shopping</div>
+            </a>  
         </div>
         
         <div class="email-note">
