--- a/Client/sproduct.html
+++ b/Client/sproduct.html
@@ -237,7 +237,7 @@
     </div>
     <div class="col">
       <h4>My Account</h4>
-      <a href="#">Sign In</a>
+      <a href="login-registration-page.html">Sign In</a>
       <a href="#">View Cart</a>
       <a href="#">My Wishlist</a>
       <a href="#">Track My Order</a>
