promotion, logo, login design

--- a/Client/about.html
+++ b/Client/about.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <a href="index.html" class="logo"><img src="img/logo.svg" alt="" class="logo" /></a>
+    <a href="index.html" class="logo"><img src="img/logo.png" alt="" class="logo" /></a>
     <nav>
       <ul id="navbar">
         <li><a href="index.html">Home</a></li>
@@ -125,7 +125,7 @@
     <!-- ===================== -->
     <footer class="section-p1">
       <div class="col">
-        <img src="img/logo.svg" alt="" class="logo" />
+        <img src="img/logo.png" alt="" class="logo" />
         <h4>Contact</h4>
         <p><strong>Adress:</strong> Ismailia,Egypt</p>
         <p><strong>Phone:</strong> 0101010101010</p>
