--- a/Client/login-registration-page.html
+++ b/Client/login-registration-page.html
@@ -64,11 +64,17 @@
         <div class="overlay-container">
             <div class="overlay">
                 <div class="overlay-panel overlay-left">
+                    <div class="logo-wrapper">
+                        <img src="img/logo.png" alt="Logo">
+                      </div>
                     <h1>Hello, Friend!</h1>
                     <p>Enter your personal details and start journey with us</p>
                     <button class="ghost desktop-toggle" id="signIn">Sign In</button>
                 </div>
                 <div class="overlay-panel overlay-right">
+                    <div class="logo-wrapper">
+                        <img src="img/logo.png" alt="Logo">
+                      </div>
                     <h1>Welcome Back!</h1>
                     <p>To keep connected with us please login with your personal info</p>
                     <button class="ghost desktop-toggle" id="signUp">Sign Up</button>
