--- a/Client/shop.html
+++ b/Client/shop.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <a href="index.html" class="logo"><img src="img/logo.svg" alt="" class="logo" /></a>
+    <a href="index.html" class="logo"><img src="img/logo.png" alt="" class="logo" /></a>
     <nav>
       <ul id="navbar">
         <li><a href="index.html">Home</a></li>
