--- a/Client/shop.html
+++ b/Client/shop.html
@@ -48,6 +48,168 @@
     <p>Save more with coupons & up to 70% off!</p>
   </section>
 
+  <div class="container">
+    <div class="search-container">
+        <input type="text" class="search-input" placeholder="Search for tech gadgets...">
+        <button class="search-button">Search</button>
+    </div>
+  </div>
+
+<div class="shop-content">
+  <!--Aside Section-->
+  <aside class="filters-section">
+    <a href="#" class="clear-filters">Clear all filters</a>
+    
+    <!-- Categories Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Categories</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="checkbox-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="lifestyle"> Lifestyle
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="phone"> Phone
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="accessories"> Accessories
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="tablet"> Tablet
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="laptop"> Laptop & PC
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="category" value="audio"> Audio
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Price Range Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Price Range</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="price-inputs">
+                <input type="number" placeholder="Min" min="0">
+                <input type="number" placeholder="Max" min="0">
+            </div>
+            <input type="range" min="0" max="2000" value="1000" class="range-input">
+        </div>
+    </div>
+
+    <!-- Rating Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Rating</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="stars-container">
+                <label class="checkbox-label">
+                    <input type="checkbox" name="rating" value="5">
+                    <span class="stars">★★★★★</span>
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="rating" value="4">
+                    <span class="stars">★★★★☆</span>
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="rating" value="3">
+                    <span class="stars">★★★☆☆</span>
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="rating" value="2">
+                    <span class="stars">★★☆☆☆</span>
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="rating" value="1">
+                    <span class="stars">★☆☆☆☆</span>
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Brand Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Brand</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="checkbox-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" name="brand" value="apple"> Apple
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="brand" value="samsung"> Samsung
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="brand" value="sony"> Sony
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="brand" value="dell"> Dell
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="brand" value="google"> Google
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Color Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Color</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="checkbox-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" name="color" value="black"> Black
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="color" value="white"> White
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="color" value="silver"> Silver
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="color" value="gold"> Gold
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="color" value="blue"> Blue
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Availability Filter -->
+    <div class="filter-group">
+        <div class="filter-title" onclick="toggleFilter(this)">
+            <span>Availability</span>
+            <span class="filter-arrow">▼</span>
+        </div>
+        <div class="filter-content">
+            <div class="checkbox-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" name="availability" value="in-stock"> In Stock
+                </label>
+                <label class="checkbox-label">
+                    <input type="checkbox" name="availability" value="out-of-stock"> Out of Stock
+                </label>
+            </div>
+        </div>
+    </div>
+</aside>
+
   <!-- ===================== -->
   <!--    Products Section   -->
   <!-- ===================== -->
@@ -311,6 +473,8 @@
       </div>
     </div>
   </section>
+</div>
+
   <!-- ===================== -->
   <!--    Paginition Section   -->
   <!-- ===================== -->
@@ -319,6 +483,8 @@
     <a href="#">2</a>
     <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
   </section>
+
+
   <!-- ===================== -->
   <!--   Newsletter    -->
   <!-- ===================== -->
@@ -335,7 +501,6 @@
       <button class="normal">Sign Up</button>
     </div>
   </section>
-
   <!-- ===================== -->
   <!-----       Footer -------->
   <!-- ===================== -->
