--- a/Client/index.html
+++ b/Client/index.html
@@ -85,7 +85,7 @@
                     <img src="/api/placeholder/200/150" alt="Smart Watch">
                 </div>
                 <div class="product-details">
-                    <h3 class="product-name">Smart Watch Pro</h3>
+                    <h3 class="product-name">Smart Watch Pro dari Iphone memang mantap hahahahhahaha bro jgn main</h3>
                     <div class="price-container">
                         <span class="original-price">$199.99</span>
                         <span class="discounted-price">$129.99</span>
