--- a/Client/order-history.html
+++ b/Client/order-history.html
@@ -243,4 +243,9 @@
                         <span class="order-id">Order #47012586</span>
                         <span class="order-status status-processing">Processing</span>
                     </div>
-                    
+                </div>
+            </div>  
+        </div>
+    </div>
+</body>
+</html>
