--- a/Admin/order-list.html
+++ b/Admin/order-list.html
@@ -161,29 +161,60 @@
                 <div class="list-group">
 
                     <!-- Order Card Example -->
-                    <div
-                        class="list-group-item list-group-item-action mb-3 rounded shadow-sm d-flex align-items-center">
-                        <div class="me-4">
-                            <div class="fs-5 fw-semibold">#25783961</div>
-                            <div class="text-muted">Order Number</div>
-                        </div>
+                    <!-- Order Card with Collapse -->
+                    <div class="accordion" id="orderAccordion">
+                        <div class="accordion-item mb-3 rounded shadow-sm border">
+                            <h2 class="accordion-header" id="heading-25783961">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse-25783961" aria-expanded="false"
+                                    aria-controls="collapse-25783961">
+                                    <div class="d-flex justify-content-between align-items-center w-100">
+                                        <div class="d-flex flex-column">
+                                            <span class="fw-semibold">#25783961</span>
+                                            <small class="text-muted">John Doe</small>
+                                        </div>
+                                        <div>
+                                            <span class="badge bg-success ms-3">Delivered</span>
+                                        </div>
+                                    </div>
+                                </button>
 
-                        <div class="flex-grow-1">
-                            <div><strong>Customer:</strong> John Doe</div>
-                            <div><strong>Status:</strong> <span class="badge bg-success">Delivered</span></div>
-                            <div><strong>Products:</strong> Racquet A x2, Shoes B x1</div>
-                            <div><strong>Total:</strong> $170.97</div>
-                        </div>
 
-                        <div class="ms-auto d-flex gap-2">
-                            <a href="view-order.html" class="btn btn-sm btn-info text-white"><i class="bi bi-eye"></i>
-                                View</a>
-                            <button class="btn btn-sm btn-warning text-white" onclick="changeStatus(this)">
-                                <i class="bi bi-arrow-repeat"></i> Change Status
-                            </button>
-                            <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i> Delete</button>
+                            </h2>
+                            <div id="collapse-25783961" class="accordion-collapse collapse"
+                                aria-labelledby="heading-25783961" data-bs-parent="#orderAccordion">
+                                <div class="accordion-body">
+                                    <p><strong>Products:</strong> Racquet A x2, Shoes B x1</p>
+                                    <p><strong>Total:</strong> $170.97</p>
+                                    <div class="d-flex gap-2">
+                                        <a href="view-order.html" class="btn btn-sm btn-info text-white">
+                                            <i class="bi bi-eye"></i> View
+                                        </a>
+
+                                        <!-- Change Status Dropdown -->
+                                        <div class="dropdown">
+                                            <button class="btn btn-sm btn-warning dropdown-toggle text-white"
+                                                type="button" id="dropdownMenuButton-25783961" data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                <i class="bi bi-arrow-repeat"></i> Change Status
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-25783961">
+                                                <li><a class="dropdown-item" href="#"
+                                                        onclick="updateStatus(this, 'Processing')">Processing</a></li>
+                                                <li><a class="dropdown-item" href="#"
+                                                        onclick="updateStatus(this, 'Shipped')">Shipped</a></li>
+                                                <li><a class="dropdown-item" href="#"
+                                                        onclick="updateStatus(this, 'Delivered')">Delivered</a></li>
+                                                <li><a class="dropdown-item" href="#"
+                                                        onclick="updateStatus(this, 'Cancelled')">Cancelled</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
 
                     <!-- Add more horizontal cards below -->
 
@@ -193,24 +224,39 @@
     </div>
 
     <script>
-        function changeStatus(button) {
-            const badge = button.closest('.list-group-item').querySelector('.badge');
-            if (badge.classList.contains('bg-success')) {
-                badge.classList.replace('bg-success', 'bg-warning');
-                badge.textContent = 'Processing';
-            } else if (badge.classList.contains('bg-warning')) {
-                badge.classList.replace('bg-warning', 'bg-primary');
-                badge.textContent = 'Shipped';
-            } else {
-                badge.classList.replace('bg-primary', 'bg-success');
-                badge.textContent = 'Delivered';
+        function updateStatus(element, newStatus) {
+            const card = element.closest('.accordion-item');
+            const badge = card.querySelector('.accordion-button .badge');
+
+            badge.textContent = newStatus;
+
+            badge.classList.remove('bg-success', 'bg-warning', 'bg-primary', 'bg-secondary', 'bg-danger');
+
+            switch (newStatus) {
+                case 'Delivered':
+                    badge.classList.add('bg-success');
+                    break;
+                case 'Processing':
+                    badge.classList.add('bg-warning');
+                    break;
+                case 'Shipped':
+                    badge.classList.add('bg-primary');
+                    break;
+                case 'Cancelled':
+                    badge.classList.add('bg-danger');
+                    break;
+                default:
+                    badge.classList.add('bg-secondary');
             }
         }
     </script>
-    
+
+
 
     <script src="script/sidebarmenu.js"></script>
     <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
